--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script>
         // Daftar nama file HTML yang ada di proyek
         const files = [
-            'index.html',
-            'about.html',
-            'contact.html',
+            'htmlviewer.html',
+            'htmlviewer-Beta.html',
+            'tictactoe.html',
             'services.html'
         ];
 
