--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             'htmlviewer.html',
             'htmlviewer-Beta.html',
             'tictactoe.html',
-            'services.html'
+            'calculator.html'
         ];
 
         // Ambil elemen <ul> untuk menampung daftar file
